--- a/3-table-exercises/exercise2/style.css
+++ b/3-table-exercises/exercise2/style.css
@@ -2,6 +2,12 @@ body {
   font-family: monospace;
   background-color:black;
 }
+h1{
+  font-size: 1.4em;
+  color: white;
+  margin-left: 3%;
+  margin-top: 2%;
+}
 
 .table {
   display: flex;
@@ -31,9 +37,11 @@ button {
   height: 40px;
   width: 90px;
   margin-right: 1em;
+  cursor: pointer;
 }
 
 #list li {
   margin-bottom: 1em;
   color: white;
+  font-size:1.5em;
 }
